tests/paczka1/small_fuzzy/92615117.err
Error in line 1: lc9827VCzE2 A894 58,1
Error in line 7: ZvxxTwoTWX A68 115,1
